Added more papers, some project conf. updates.